# style_freak

./: Cargo.toml  README.md  genres.txt
src/: colors.rs  main.rs  style_tree.rs
src/screen/: mod.rs  style_view_screen.rs
src/screen/menu/: item.rs  mod.rs  style_menu.rs
