[package]
name = "style_freak"
version = "0.1.2"
authors = ["Sean DiGirolamo <s.digirolamo218@gmail.com>"]
edition = "2018"
description = "Small mpd client for traversing genres and subgenres"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.99.0"
mpd = "0.0.12"
json = "0.12.4"
